tests/fixtures/invalid/str_bitxor_float.py
# Cannot bitwise XOR Str and Float
x: float = "hello" ^ 1.0
